--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -12,18 +12,18 @@
   --color-gray-light: #c4c4c4;
   --color-gray-medium: #666666;
   --color-gray-dark: #666666;
-  --color-blue-light: #8dd0ff;
-  --color-blue-medium: #29476d;
-  --color-blue-dark: #3f4b5b;
-  // --color-blue-darker: #343e4d;
-  --color-blue-darker: #2d333e;
+  --color-blue-light: #40739e;
+  --color-blue-medium: #273c75;
+  --color-blue-dark: #3c4353;
+  --color-blue-darker: #2f3640;
   --color-green-light: #0cd10c;
   --color-green-medium: #2f9c0a;
   --color-green-dark: #2a880b;
   --color-green-darker: #2f6b1b;
-  --color-red-light: #ec2323;
-  --color-red-medium: #c92c2c;
+  --color-red-light: #e84118;
+  --color-red-medium: #c23616;
   --color-red-dark: #a31f1f;
+  --color-red-darker: #7c0e0e;
   --color-dark: #444444;
   --color-darker: #20262e;
   --color-darkest: #151515;
