--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;300;400;500;600;700&family=PT+Sans:wght@400;700&display=swap');
-@import './assets/sass/variables.scss';
-@import './assets/sass/typography.scss';
+@import './sass/variables.scss';
+@import './sass/typography.scss';
 
 * {
     -webkit-font-smoothing: antialiased;
@@ -15,14 +15,13 @@
     text-decoration: none;
 }
 html {
-    font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
+    font-size: 62.5% !important; //1 rem = 10px; 10px/16px = 62.5%
     font-family: 'Kanit', sans-serif;
 }
 body{
     list-style-type: none;
     line-height: 1.4;
-    background-color: var(--color-blue-darker);
-    overflow: hidden;
+    background-color: var(--color-darker);
 }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
