--- a/src/views/Spells/Spells.scss
+++ b/src/views/Spells/Spells.scss
@@ -1,1 +1,12 @@
-@import '../../assets/sass/grid.scss';
+@import '../../sass/grid.scss';
+
+// Transitions
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
