--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -6,7 +6,7 @@
 
   // Colors
   --color-white: #ffffff;
-  --color-light: #ffffffde;
+  --color-light: #ffffffd0;
   --color-lighter: #fafafa;
   --color-gray-lighter: #ffffff99;
   --color-gray-light: #c4c4c4;
@@ -30,6 +30,8 @@
 
   --shadow: rgba(0, 0, 0, 0.4);
   --overlay: rgba(0, 0, 0, 0.6);
+
+  --border-light: #ffffff1f;
 
   // Font size
   --fontsize-1: 5rem;
