--- a/src/sass/grid.scss
+++ b/src/sass/grid.scss
@@ -2,10 +2,14 @@
 
 .row {
   max-width: var(--grid-width);
-  margin: 0 auto;
+  margin: 0 auto !important;
   @include flex-start();
   flex-wrap: wrap;
   gap: var(--gap-md);
+  
+  &.no_rowgap {
+    row-gap: 0;
+  }
 
 
   &:not(:last-child) {
