--- a/src/sass/mixins.scss
+++ b/src/sass/mixins.scss
@@ -24,7 +24,7 @@
 
 // Set font size and line height.
 @mixin font-size-line-height($font-size, $line-height) {
-  font-size: px-to-rem($font-size);
+  font-size: $font-size;
   line-height: ($line-height / $font-size);
 }
 
