--- a/src/sass/typography.scss
+++ b/src/sass/typography.scss
@@ -9,6 +9,7 @@ h6 {
 	clear: both;
   font-family: var(--font-kanit);
   margin: 0;
+  color: var(--color-light);
 }
 
 h1 {
@@ -22,7 +23,6 @@ h1 {
 }
 
 h2 {
-  margin-bottom: 2.1rem;
   letter-spacing: 0;
   font-size: var(--fontsize-2);
   line-height: 4rem;
@@ -30,16 +30,23 @@ h2 {
 }
 
 h3 {
-  margin-bottom: 2.1rem;
+  margin-bottom: 2.1rem !important;
   letter-spacing: 0;
   font-size: var(--fontsize-3);
   line-height: 3rem;  
 }
 
 h4 {
-  margin-bottom: px-to-rem(10px);
+  margin-bottom: 1rem !important;
   font-size: var(--fontsize-4);
   line-height: 3rem;
+}
+
+h5 {
+  margin-bottom: 1rem !important;
+  font-size: var(--fontsize-5);
+  line-height: 2.5rem;
+  font-weight: 500;
 }
 
 .no_margin {
@@ -53,4 +60,5 @@ h4 {
 p {
   color: var(--color-light);
   font-size: var(--fontsize-6);
+  line-height: 1.8;
 }
