--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,19 @@ body{
     line-height: 1.4;
     background-color: var(--color-darker);
 }
+body::-webkit-scrollbar {
+    width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--color-red-dark);
+    outline: 1px solid var(--color-red-dark);
+}
+  
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
