--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,9 +1,11 @@
 @import '../../sass/mixins.scss';
 
 .header {
+  position: relative;
   @include flex-between();
   align-items: stretch;
   @include padding-x(2rem);
+  z-index: 50;
   
   &_logo {
     width: fit-content;
@@ -32,6 +34,10 @@
   color: var(--color-light) !important;
   letter-spacing: 0.2rem;
   transition: all var(--trs) ease-in-out;
+
+  .icon {
+    margin-right: 1rem;
+  }
   
   @include has-hover() {
     background-color: var(--color-red-darker);
@@ -46,10 +52,46 @@
       content: '';
       background-color: var(--color-red-darker);
       position: absolute;
-      bottom: -4px;
+      bottom: 0;
       left: 0;
       width: 100%;
       height: 4px;
     }
+  }
+}
+
+.mobile_nav  {
+  position: fixed !important;
+  top: 56px !important;
+  left: 0 !important;
+  width: 60vw !important;
+  height: auto !important;
+  transform: translateX(0%);
+
+  .nav_link {
+    font-size: 1.6rem !important;
+    color: var(--color-light) !important;
+    letter-spacing: 0.2rem;
+  }
+
+  .v-list-item--link:before {
+    background-color: var(--color-red-darker);
+  }
+
+  .v-list-item__icon {
+    display: flex;
+    align-items: center;
+    height: 30px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+
+    &:first-child {
+      margin-right: 10px;
+    }
+  }
+
+  .v-list-item__title {
+    font-size: inherit !important;
+    line-height: 2rem !important;
   }
 }
