--- a/src/sass/mixins.scss
+++ b/src/sass/mixins.scss
@@ -207,17 +207,17 @@ $breakpoint arguement choices:
 ORDER: Base + typography > general layout + grid > page layout > components
 1em = 16px
 */
-@mixin respond($breakpoint) {
+@mixin breakpoint($breakpoint) {
   @if $breakpoint == phone {
       @media only screen and (max-width: 37.5em) { @content };    //600px
   }
-  @if $breakpoint == tab-port {
+  @else if $breakpoint == tab-port {
       @media only screen and (max-width: 56.25em) { @content };     //900px
   }
-  @if $breakpoint == tab-land {
+  @else if $breakpoint == tab-land {
       @media only screen and (max-width: 75em) { @content };    //1200px
   }
-  @if $breakpoint == big-desktop {
+  @else if $breakpoint == big-desktop {
       @media only screen and (min-width: 112.5em) { @content };    //1800
   }
 }
