--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,6 +4,8 @@
   position: relative;
   @include flex-between();
   align-items: stretch;
+  width: 100%;
+  height: auto;
   @include padding-x(2rem);
   z-index: 50;
   
@@ -23,6 +25,8 @@
   }
 
   & > .v-toolbar__content {
+    width: 100%;
+    height: auto;
     justify-content: space-between;
     align-items: stretch !important;
   }
@@ -52,7 +56,7 @@
       content: '';
       background-color: var(--color-red-darker);
       position: absolute;
-      bottom: 0;
+      bottom: -4px;
       left: 0;
       width: 100%;
       height: 4px;
