--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,3 +74,24 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+/* we will explain what these classes do next! */
+.v-enter-active,
+.v-leave-active {
+  transition: opacity 0.5s ease;
+}
+
+.v-enter-from,
+.v-leave-to {
+  opacity: 0;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+// Fade
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
