--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,7 +1,7 @@
 :root {
 
   // Fonts
-  --font-kanit: 'Kanit', sans-serif;
+  --font-raleway: 'Raleway', sans-serif;
   --font-ptsans: 'PT Sans', sans-serif;
 
   // Colors
