--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
   @include flex-between();
   align-items: stretch;
   width: 100%;
-  height: auto;
+  height: 68px!important;
   @include padding-x(2rem);
   z-index: 50;
   
@@ -13,9 +13,13 @@
     width: fit-content;
     max-width: 25rem;
     
-    & > h1 {
-      font-size: var(--fontsize-1);
-      color: var(--color-light) !important;
+  }
+  
+  &__title {
+    color: var(--color-light) !important;
+    
+    span {
+      color: var(--color-red-darker) !important;
     }
   }
   
@@ -56,7 +60,7 @@
       content: '';
       background-color: var(--color-red-darker);
       position: absolute;
-      bottom: 4px;
+      bottom: 0;
       left: 0;
       width: 100%;
       height: 4px;
