--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;300;400;500;600;700&family=PT+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Raleway:wght@100;300;400;500;600;700&display=swap');
 @import './sass/variables.scss';
 @import './sass/typography.scss';
+@import './sass/buttons.scss';
 
 * {
     -webkit-font-smoothing: antialiased;
@@ -16,7 +17,7 @@
 }
 html {
     font-size: 62.5% !important; //1 rem = 10px; 10px/16px = 62.5%
-    font-family: 'Kanit', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 body{
     list-style-type: none;
