Spells on localStorage and vuex state

--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -24,6 +24,7 @@
   
   & span {
     display: inline-block;
+    font-family: 'Circular-Loom', sans-serif;
     font-size: var(--fontsize-5);
     color: var(--color-light) !important;
   }
