--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -2,7 +2,8 @@
 
   // Fonts
   --font-raleway: 'Raleway', sans-serif;
-  --font-ptsans: 'PT Sans', sans-serif;
+  --font-messiri: 'El Messiri', Arial, sans-serif;
+  --font-blaak: "Blaak", 'Raleway', Arial, sans-serif;
 
   // Colors
   --color-white: #ffffff;
