--- a/src/components/ListCard/ListCard.scss
+++ b/src/components/ListCard/ListCard.scss
@@ -7,6 +7,29 @@
 
   &_header {
     @include flex-start();
+    flex-wrap: wrap;
+    row-gap: 1rem;
+    
+    .v-card__title {
+      display: inline-block !important;
+      padding: 0 1.2rem 0 0;
+      font-size: 2.2rem !important;
+      font-family: var(--font-messiri);
+      color: var(--color-white);
+      font-weight: 500 !important;
+      letter-spacing: 0.2rem !important;
+      word-break: break-word;
+      line-height: 1.3;
+    }
+    .v-card__subtitle {
+      display: inline-block !important;
+      font-size: var(--fontsize-7) !important;
+      line-height: 1.8;
+      color: var(--color-white);
+      font-weight: 300 !important;
+      letter-spacing: 0.1rem !important;
+      padding: 0;
+    }
   }
   &_footer {
     @include flex-end();
@@ -22,15 +45,12 @@
     }
   }
   &_img {
-    @include flex-center();
+    position: absolute;
+    bottom: 9px;
+    left: 5px;
+    opacity: 0.06;
+    height: 60%;
+    width: 50%;
   }
 
-}
-
-.v-card__title {
-  display: inline-block !important;
-  font-size: 2.25rem !important;
-  color: var(--color-white);
-  font-weight: 300 !important;
-  letter-spacing: 0.1rem !important;
 }
