--- a/src/sass/typography.scss
+++ b/src/sass/typography.scss
@@ -7,7 +7,7 @@ h4,
 h5,
 h6 {
   margin: 0;
-  font-family: var(--font-raleway);
+  font-family: var(--font-messiri);
   font-weight: 500;
   color: var(--color-light);
   clear: both;
