--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@
 }
 html {
     font-size: 62.5% !important; //1 rem = 10px; 10px/16px = 62.5%
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 body{
     list-style-type: none;
