--- a/src/views/Spells/Spells.scss
+++ b/src/views/Spells/Spells.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   margin-bottom: 1rem;
   padding: 0 2rem 2rem;
   font-family: 'Raleway' !important;
