--- a/src/components/ListCard/ListCard.scss
+++ b/src/components/ListCard/ListCard.scss
@@ -36,7 +36,7 @@
       padding: 0;
       
       @include breakpoint(phone) {
-        display: none
+        display: none !important;
       }
     }
   }
