--- a/src/components/ListCard/ListCard.scss
+++ b/src/components/ListCard/ListCard.scss
@@ -27,16 +27,22 @@
       line-height: 1.3;
     }
     .v-card__subtitle {
-      display: inline-block !important;
+      display: block !important;
+      width: 100%;
+      padding: 0;
       font-size: var(--fontsize-7) !important;
       line-height: 1.8;
       color: var(--color-white);
       font-weight: 300 !important;
       letter-spacing: 0.1rem !important;
-      padding: 0;
-      
+      text-transform: capitalize;
+
       @include breakpoint(phone) {
         display: none !important;
+      }
+
+      span {
+        font-weight: 700;
       }
     }
   }
