--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -30,6 +30,13 @@
     background-size: cover;
   }
   
+  &.monsters {
+    background:linear-gradient(to top right, rgba(#3a3a3a,0.4), rgba(#2d333e,0.4)), url('../../assets/img/dragon.jpg');
+    background-position: 50% 70%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  
   & span {
     display: inline-block;
     font-family: 'Circular-Loom', sans-serif;
