Monster drawer info and type props to drawer and cardList

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,9 +1,9 @@
 :root {
 
   // Fonts
-  --font-raleway: 'Raleway', sans-serif;
+  --font-Montserrat: 'Montserrat', sans-serif;
   --font-messiri: 'El Messiri', Arial, sans-serif;
-  --font-blaak: "Blaak", 'Raleway', Arial, sans-serif;
+  --font-blaak: "Blaak", 'Montserrat', Arial, sans-serif;
 
   // Colors
   --color-white: #ffffff;
