--- a/src/components/InnerDrawer/MonsterDrawer/MonsterDrawer.scss
+++ b/src/components/InnerDrawer/MonsterDrawer/MonsterDrawer.scss
@@ -1,17 +1,40 @@
-// @import '../../../sass/mixins.scss';
+@import '../../../sass/mixins.scss';
 
-.box {
-  margin-bottom: var(--gap-sm);
-  
-  h5{
+.highlight {
+  width: 100% !important;
+  max-width: 200px;
+  padding: 1rem;
+  text-align: center;
+
+  h4 {
     margin-bottom: 0 !important;
-    display: inline-block;
   }
-  &_inner {
-    margin-bottom: var(--gap-sm);
+  
+  &_data {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 65px;
 
-    & p:last-child {
-      margin-bottom: 0.2rem;
+    svg {
+      position: relative;
+      top: -2px;
+      margin-right: 1rem;
+      font-size: 3.5rem;
+      color: var(--color-gray-lighter);
+    }
+
+    p {
+      margin: 0;
+      font-family: var(--font-messiri);
+      font-size: var(--fontsize-3);
+      font-weight: 500;
     }
   }
+}
+
+.no_rowgap > .highlight ~ .highlight {
+  border-left: 1px solid rgba(255, 255, 255, 0.12);
 }
