--- a/src/views/Spells/Spells.scss
+++ b/src/views/Spells/Spells.scss
@@ -8,7 +8,7 @@
   gap: 3rem;
   margin-bottom: 1rem;
   padding: 0 2rem 2rem;
-  font-family: 'Raleway' !important;
+  font-family: 'Montserrat' !important;
   border-bottom: 3px solid var(--color-blue-darker);
   
   @include breakpoint(phone) {
