More monsters info

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -24,7 +24,7 @@
   --color-red-light: #e84118;
   --color-red-medium: #c23616;
   --color-red-dark: #a31f1f;
-  --color-red-darker: #7c0e0e;
+  --color-red-darker: #822000;
   --color-dark: #444444;
   --color-darker: #20262e;
   --color-darkest: #151515;
@@ -41,7 +41,8 @@
   --fontsize-4: 2.2rem;
   --fontsize-5: 1.8rem;
   --fontsize-6: 1.6rem;
-  --fontsize-7: 1.2rem;
+  --fontsize-7: 1.4rem;
+  --fontsize-8: 1.2rem;
   --fontsize-default: 1.6rem;
 
   // Breakpoints
