--- a/src/components/InnerDrawer/MonsterDrawer/MonsterDrawer.scss
+++ b/src/components/InnerDrawer/MonsterDrawer/MonsterDrawer.scss
@@ -35,6 +35,58 @@
   }
 }
 
+.box {
+
+  h4{
+    margin-bottom: 0 !important;
+  }
+
+  p, span {
+    color: var(--color-light);
+    font-size: var(--fontsize-6);
+    line-height: 1.8;
+  }
+
+  &_inner {
+
+    & p:last-child {
+      margin-bottom: 0.2rem;
+    }
+  }
+}
+
+.box_stats {
+
+  .box_inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 0 !important;
+    gap: 0.5rem;
+    
+    & > span {
+      color: var(--color-lighter);
+      font-size: var(--fontsize-4);
+      padding: 1rem;
+      border: 3px solid var(--color-red-dark);
+      display: inline-block;
+      width: 55px;
+      font-family: 'El Messiri';
+      font-weight: 700;
+      letter-spacing: 0.3rem;
+      height: 55px;
+      text-align: center;
+      border-radius: 50%;
+    }
+  }
+}
+
 .no_rowgap > .highlight ~ .highlight {
   border-left: 1px solid rgba(255, 255, 255, 0.12);
 }
+
+.no_rowgap > .highlight:first-of-type,
+.no_rowgap > .box_stats:first-of-type {
+  margin-left: -2rem;
+}
+
