--- a/src/components/Drawer/Drawer.scss
+++ b/src/components/Drawer/Drawer.scss
@@ -17,10 +17,15 @@
     overflow: auto;
     transition: right ease-in-out var(--trs);
 
+    // @include breakpoint(tab-land) {
+    //   grid-template-columns: repeat(2, 1fr);
+    //   grid-template-rows: repeat(2,auto);
+    // }
+
     @include breakpoint(phone) {
       width: 100vw;
       right: -100vw;
-      padding: 2rem;
+      padding: 2rem 1.5rem;
     }
   }
   
