starting character page

--- a/src/sass/reset.scss
+++ b/src/sass/reset.scss
@@ -8,3 +8,10 @@
   font-family: inherit;
 }
 
+.v-application a {
+  color: inherit;
+}
+
+.theme--light {
+  background: transparent !important;
+}
