--- a/src/styles.scss
+++ b/src/styles.scss
@@ -80,6 +80,10 @@ table {
     border-spacing: 0;
 }
 
+main {
+    padding: 7rem 0px 0px !important;
+}
+
 /* we will explain what these classes do next! */
 .v-enter-active,
 .v-leave-active {
