--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,9 +5,11 @@
   @include flex-between();
   align-items: stretch;
   width: 100%;
-  height: 68px!important;
+  height: 7rem !important;
   @include padding-x(2rem);
-  z-index: 50;
+  box-shadow: none !important;
+  border-bottom: 1px solid hsla(0,0%,100%,.12) !important;
+  z-index: 50 !important;
   
   &_logo {
     width: fit-content;
@@ -25,7 +27,7 @@
   
   &_nav {
     @include flex-end();
-    font-size: var(--fontsize-5);
+    font-size: var(--fontsize-6);
   }
 
   & > .v-toolbar__content {
