--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -16,7 +16,7 @@
   @include breakpoint(phone) {
     margin-bottom: var(--gap-sm);
   }
-
+  
   &__title {
     display: inline-block;
     color: var(--color-light);
@@ -31,6 +31,16 @@
   }
   
   &.monsters {
+    background:linear-gradient(to top right, rgba(#3a3a3a,0.4), rgba(#2d333e,0.4)), url('../../assets/img/dragon.jpg');
+    background-position: 50% 70%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  
+  &.characters {
+    align-items: flex-end;
+    flex-wrap: wrap;
+    height: 20rem;
     background:linear-gradient(to top right, rgba(#3a3a3a,0.4), rgba(#2d333e,0.4)), url('../../assets/img/dragon.jpg');
     background-position: 50% 70%;
     background-repeat: no-repeat;
