cardList bgcolor and character infos

--- a/src/components/ListCard/ListCard.scss
+++ b/src/components/ListCard/ListCard.scss
@@ -2,7 +2,7 @@
 
 .card {
   position: relative;
-  background-color: var(--color-blue-darker) !important;
+  background-color: var(--color-blue-dark) !important;
   border-left: 5px solid var(--color-red-dark) !important;
   padding: 1rem 1.5rem;
   
