--- a/src/components/ListCard/ListCard.scss
+++ b/src/components/ListCard/ListCard.scss
@@ -4,7 +4,7 @@
   position: relative;
   background-color: var(--color-blue-dark) !important;
   border-left: 5px solid var(--color-red-dark) !important;
-  padding: 1rem 1.5rem;
+  padding: 2rem 1.8em 1rem;
   
   @include breakpoint(phone) {
     padding: 2rem 1.5rem;
@@ -17,7 +17,7 @@
     
     .v-card__title {
       display: inline-block !important;
-      padding: 0 1.2rem 0 0;
+      padding: 0 1.2rem 1.2rem 0;
       font-size: 2.2rem !important;
       font-family: var(--font-messiri);
       color: var(--color-white);
