--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -34,19 +34,22 @@
   }
 }
 
-.v-card__title {
-  font-size: var(--fontsize-3) !important;
-  padding-top: 3rem !important;
-  font-family: var(--font-messiri);
-  margin-top: 0 !important;
-}
-
-.v-card__subtitle {
-  font-size: var(--fontsize-7) !important;
-  line-height: 1.4em !important;
-  margin-top: 0 !important;
-}
-
-.v-card__actions {
-  padding: 0 1.6rem 1.6rem !important;
+.v-card {
+  background-color: var(--color-blue-dark) !important;
+  &__title {
+    font-size: var(--fontsize-3) !important;
+    padding-top: 3rem !important;
+    font-family: var(--font-messiri);
+    margin-top: 0 !important;
+  }
+  
+  &__subtitle {
+    font-size: var(--fontsize-7) !important;
+    line-height: 1.4em !important;
+    margin-top: 0 !important;
+  }
+  
+  &__actions {
+    padding: 0 1.6rem 1.6rem !important;
+  }
 }
