--- a/src/views/Spells/Spells.scss
+++ b/src/views/Spells/Spells.scss
@@ -61,6 +61,13 @@
   }
 }
 
+// Breakpoint
+@media screen and (max-width: 1200px) {
+}
+@media screen and (max-width: 900px) {
+}
+@media screen and (max-width: 600px) {
+}
 
 // Transitions
 .fade-enter-active,
