--- a/src/components/ListCard/ListCard.scss
+++ b/src/components/ListCard/ListCard.scss
@@ -15,6 +15,10 @@
     flex-wrap: wrap;
     row-gap: 1rem;
     
+    @include breakpoint(phone) {
+      align-items: center;
+    }
+    
     .v-card__title {
       display: inline-block !important;
       padding: 0 1.2rem 1.2rem 0;
@@ -25,7 +29,14 @@
       letter-spacing: 0.2rem !important;
       word-break: break-word;
       line-height: 1.3;
+      
+      @include breakpoint(phone) {
+        width: 85%;
+        font-size: 1.9rem !important;
+        padding: 0;
+      }
     }
+
     .v-card__subtitle {
       display: block !important;
       width: 100%;
@@ -39,6 +50,10 @@
 
       @include breakpoint(phone) {
         display: none !important;
+        &.mobile_visible{
+          display: block !important;
+          margin-top: 0.8rem;
+        }
       }
 
       span {
@@ -97,13 +112,4 @@
 @media screen and (max-width: 900px) {
 }
 @media screen and (max-width: 600px) {
-  .card_header {
-    flex-wrap: nowrap;
-    align-items: center;
-
-    .v-card__title {
-      font-size: 1.7rem !important;
-      padding: 0;
-    }
-  }
 }
