--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -44,6 +44,14 @@
     background-size: cover;
   }
   
+  
+  &.races {
+    background:linear-gradient(to top right, rgba(#3a3a3a,0.4), rgba(#2d333e,0.4)), url('../../assets/img/races.jpg');
+    background-position: 50% 70%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  
   &.characters {
     align-items: flex-end;
     flex-wrap: wrap;
